# compiler-adventures

./: .gitignore  LICENSE  Makefile  README.md  compile  compile.ml  compile_and_run  dune  interpret  lexer.mll  opt  opt.ml  parse.ml  parser.mly  program.ml  test.ml  test_O0.ml  test_O1.ml  test_O2.ml  tests.ml  tests_O0.expected  tests_O1.expected  tests_O2.expected  utils.ml
test/: 01.txt  04.txt  check_interpret.sh  compile-O0.expected  compile-O1.expected  compile-O2.expected  compile_and_run-O1.expected  expect.sh  interpret.expected  opt-O0.expected  opt-O1.expected  opt-O2.expected
