(ocamllex
  (modules lexer))

(menhir
  (modules parser))

(library
  (name alu)
  (modules
    lexer
    parse
    parser
    program
    utils))

(test
  (name test)
  (modules test tests)
  (deps aoc_2021.txt)
  (libraries alu))

(rule
  (with-stdout-to
    tests.output
    (run ./test.exe)))

(rule
  (alias runtest)
  (action
    (diff tests.expected tests.output)))

;; FileCheck
; (rule
;   (alias runtest)
;   (action
;     (pipe-stdout
;       (run ./test.exe)
;       (run FileCheck test.ml))))
