(ocamllex
  (modules lexer))

(menhir
  (modules parser))

(library
  (name alu)
  (modules
    lexer
    parse
    parser
    program
    utils))

(executable
  (name opt)
  (modules opt)
  (libraries alu))

;; FileCheck
; (rule
;   (alias runtest)
;   (action
;     (pipe-stdout
;       (run ./test.exe)
;       (run FileCheck test.ml))))
